--- a/src/main/webapp/static/css/movie.css
+++ b/src/main/webapp/static/css/movie.css
@@ -2,7 +2,6 @@
     padding: 10px;
     border-top: 1px solid #f5f5f5;
     display: -webkit-flex;
-    flex-flow: row wrap;
     height: 130px;
 }
 .movieImgContainer{
@@ -18,7 +17,7 @@
 }
 .movieInfo{
     flex: 8;
-    /* padding-left: 10px; */
+    padding-left: 10px;
     display: -webkit-flex;
     flex-flow: column wrap;
 }
@@ -48,10 +47,8 @@
     color: #a9a9a9;
     text-overflow: ellipsis;
     overflow: hidden;
-    white-space: nowrap;
 }
 .movieButtonContainer{
-    flex: 1;
     padding-left: 10px;
     display: -webkit-flex;
     flex-flow: column wrap;
@@ -61,7 +58,7 @@
     /* align-items: center; */
 }
 .movieScore{
-    flex: 4;
+    flex: 1;
     color: #666;
     align-items: center;
     display: flex;
@@ -69,7 +66,7 @@
 
 }
 .movieButton{
-    flex: 3;
+    flex: 1;
     align-items: center;
     display: flex;
     justify-content: flex-end;
