--- a/src/main/webapp/static/css/movieDetail.css
+++ b/src/main/webapp/static/css/movieDetail.css
@@ -50,6 +50,8 @@
 .movieInfoInner .outImg{
     border-radius: 4px;
     flex: 1;
+    display: flex;
+    align-items: center;
 }
 .movieInfoInner .outImg img{
     border-radius: 4px;
@@ -68,7 +70,6 @@
     -ms-flex-direction: column;
     flex-direction: column;
     justify-content: center;
-    margin-left: 20px;
     padding-left: 10px;
 }
 .movieInfoInner .movieSummary .movieName{
@@ -110,4 +111,64 @@
     max-height: 500px;
     overflow: hidden;
     line-height: 30px;
+}
+.srcLogo
+{
+    width: 18px;
+    margin-left: 4px;
+}
+.hot-comment{
+    padding: 13px 17px 0;
+    border-top: 10px solid #f5f5f5;
+    background: #fff;
+
+}
+.hot-comment .comment-header{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border-bottom: 1px solid #f5f5f5;
+}
+.hot-comment .comment-header p{
+    font-size: 14px;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    font-weight: 400;
+    color: #666;
+}
+.comment-item{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    border-bottom: 1px solid #f5f5f5;
+}
+.comment-item .user-avatar{
+    top: 10px;
+    position: relative;
+    height: 40px;
+    border-radius: 100%;
+    flex: 1;
+}
+.approve{
+    float: right;
+}
+.reply
+{
+    float: right;
+}
+.avatar-img{
+    height: 40px;
+    border-radius: 100%;
+}
+.comment-item .comment-info{
+    flex: 18;
+    padding: 15px 0px;
 }
