--- a/src/main/webapp/static/velocity/templates/index.vm
+++ b/src/main/webapp/static/velocity/templates/index.vm
@@ -2,37 +2,31 @@
 
 <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo">Logo</a>
-        <ul class="right hide-on-med-and-down">
-            <li><a href="#">Navbar Link</a></li>
-        </ul>
-
-        <ul id="nav-mobile" class="side-nav">
-            <li><a href="#">Navbar Link</a></li>
-        </ul>
-        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+        <div class="searchContainer">
+        <i class="search">add</i>
+       <span><input class="search" type="search" maxlength="32" placeholder="找电影" autocomplete="off"/></span>
+        </div>
     </div>
 </nav>
 
 <div id="container"></div>
 
-<footer class="page-footer teal">
-    <div class="container">
-        <div class="row">
-            <div class="col l6 s12">
-                <h5 class="white-text">movieTickets</h5>
-            </div>
-            <div class="col l3 s12">
+<footer class="custom-footer teal">
+            <h5 class="white-text footer-text">movieTickets</h5>
+            <div class="footer-logo">
                 <ul>
-                    <li><a class="white-text" href="#!">Link 1</a></li>
+                    <li><img class="srcLogo" src="./static/images/maoyan.png"/><a class="white-text" href="http://maoyan.com/">猫眼</a></li>
                 </ul>
             </div>
-            <div class="col l3 s12">
+            <div class="footer-logo">
                 <ul>
-                    <li><a class="white-text" href="#!">Link 2</a></li>
+                    <li><img class="srcLogo" src="./static/images/douban.png"/><a class="white-text" href="http://douban.com/">豆瓣</a></li>
                 </ul>
             </div>
-        </div>
+    <div class="footer-logo">
+        <ul>
+            <li><img class="srcLogo" src="./static/images/mtime.jpg"/><a class="white-text" href="http://mtime.com/">时光</a></li>
+        </ul>
     </div>
 </footer>
 
